[HaCreator] fix edge case from prior commit  5c18594dcebf933a538c14f47094fbe1a95b219b
- it should be drawn to the screen's position instead of relative position
- LB values not updated when loading new maps
- LB values not reset to 0 when checkbox is unchecked.

--- a/HaCreator/GUI/HaEditor.xaml
+++ b/HaCreator/GUI/HaEditor.xaml
@@ -38,6 +38,7 @@
             </Grid.RowDefinitions>
             
             <TabControl x:Name="tabControl1" Grid.Row="0"
+                       SelectionChanged="tabControl1_SelectionChanged"
                         >
 
             </TabControl>
